# midi_synth

./: .gitignore  Cargo.toml
src/: main.rs
