[package]
name = "midi_synth"
version = "0.1.0"
authors = ["MarimeGui <lepro.guillaume@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
standard_midi_file = { git = "https://github.com/MarimeGui/standard_midi_file.git" }
synthesizer = { git = "https://github.com/MarimeGui/rust_synthesizer.git" }